# bewerber-assistent

./: .gitignore  BACKLOG.md  LICENSE  README.md
bewerber/: .env.example  README.md  RUNLOG.md  anlagen.yaml.example  pyproject.toml  searches.yaml.example  searches.yaml.steve-full
bewerber/bewerber/: dashboard.html
bewerber/scripts/: crontab.example  run-discover.sh
bewerber/src/bewerber/: briefing.py  cli.py  migration.py  setup_wizard.py
bewerber/src/bewerber/dashboard/: auth.py  render.py  sample_data.py  (+1 more)
bewerber/templates/: _organic_ds.html.j2  anlagen.html.j2  anschreiben.html.j2  dashboard.html.j2  interview_briefing.html.j2  lebenslauf.html.j2  login.html.j2  onboarding.html.j2  searches.html.j2
bewerber/tests/: conftest.py
bewerber/tests/fixtures/: arbeitsagentur_response.json  posting_with_full_description.html  sample.docx  sample_posting.txt  sample_with_tables.docx
bewerber/tests/integration/: test_discovery_e2e.py  test_e2e_profile.py  test_tailor_e2e.py
bewerber/tests/unit/: test_anlagen.py  test_anschreiben.py  test_auth.py  test_base_template.py  test_cli.py  test_cli_b.py  test_customize.py  test_dashboard.py  test_dashboard_server.py  test_discovery_orchestrator.py  test_document.py  test_enrich.py  test_extractor.py  test_keyword_variants.py  test_llm.py  test_migration.py  test_modern_template.py  test_orchestrator.py  test_organic_redesign.py  test_paths.py  test_posting.py  test_profile_schema.py  test_projects.py  test_render.py  test_render_html.py  test_scoring.py  test_scraper_arbeitsagentur.py  test_scraper_indeed.py  test_scraper_linkedin.py  test_scraper_protocol.py  test_searches.py  test_settings.py  test_setup_wizard.py  test_slug.py  test_snapshot.py  test_state.py  test_state_schema.py  test_sync.py  test_tailor_paths.py  test_templates_store.py  (+4 more)
(+42 files in other folders)
