[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bewerber"
version = "0.1.0"
description = "Personal job-application assistant: profile extraction, job discovery, tailoring, dashboard"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0",
    "pdfplumber>=0.10",
    "python-docx>=1.1",
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-cov>=4.1",
]

[project.scripts]
bewerber = "bewerber.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bewerber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
